k8s/whoami/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: whoami
  labels:
    app: whoami
spec:
  selector:
    matchLabels:
      app: whoami
  replicas: 1
  template:
    metadata:
      labels:
        app: whoami
      annotations:
        diun.enable: "true"
    spec:
      tolerations:
        - key: "performance"
          operator: "Equal"
          effect: "NoSchedule"
          value: "low"
      containers:
        - name: whoami
          imagePullPolicy: Always
          image: traefik/whoami:v1.9.0
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
              ephemeral-storage: 100Mi
            requests:
              cpu: 10m
              memory: 10Mi
              ephemeral-storage: 10Mi
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
spec:
  type: ClusterIP
  ports:
    - port: 5678
      targetPort: 80
  selector:
    app: whoami
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-tls-ingress
  namespace: whoami
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # traefik.ingress.kubernetes.io/router.middlewares: basic-auth-basic-auth@kubernetescrd
    # traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: whoami.wayl.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 5678
    - host: cfwhoami.wayl.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 5678
  tls:
    - secretName: whoami-tls
      hosts:
        - whoami.wayl.one
    - secretName: cfwhoami-tls
      hosts:
        - cfwhoami.wayl.one
